tests/type_param_bounds/type_param_bounds.exp
Error: type_param_bounds.js:4
  4: (true: X<string>);
      ^^^^ boolean
  4: (true: X<string>);
              ^^^^^^ string. This type is incompatible with the bound on type parameter `T`:
  3: type X<T: number> = bool;
               ^^^^^^ number


Found 1 error
